--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6301,6 +6301,10 @@ video {
   height: 100vh;
 }
 
+.text-xxs {
+  font-size: 0.50rem;
+}
+
 .text-xs {
   font-size: 0.75rem;
 }
@@ -24759,6 +24763,10 @@ video {
 
   .sm\:h-screen {
     height: 100vh;
+  }
+
+  .sm\:text-xxs {
+    font-size: 0.50rem;
   }
 
   .sm\:text-xs {
@@ -43222,6 +43230,10 @@ video {
     height: 100vh;
   }
 
+  .md\:text-xxs {
+    font-size: 0.50rem;
+  }
+
   .md\:text-xs {
     font-size: 0.75rem;
   }
@@ -61683,6 +61695,10 @@ video {
     height: 100vh;
   }
 
+  .lg\:text-xxs {
+    font-size: 0.50rem;
+  }
+
   .lg\:text-xs {
     font-size: 0.75rem;
   }
@@ -80142,6 +80158,10 @@ video {
 
   .xl\:h-screen {
     height: 100vh;
+  }
+
+  .xl\:text-xxs {
+    font-size: 0.50rem;
   }
 
   .xl\:text-xs {
